--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@ body {
   padding: 0; 
 }
 
-/* Większy tytuł i emoji */
 h1 { 
   color: #00d26a; 
   margin-top: 40px; 
   font-size: 42px; 
 }
 
-/* Przyciski */
 button { 
   background: #00d26a; 
   color: black; 
@@ -38,7 +36,6 @@ button:hover {
   background: #00b85d; 
 }
 
-/* Pola tekstowe */
 input { 
   font-size: 20px; 
   padding: 15px; 
@@ -50,7 +47,6 @@ input {
   margin-bottom: 15px; 
 }
 
-/* Panel gracza z lekkim efektem świecenia */
 #myName {
   margin-top: 20px;
   padding: 20px;
@@ -61,7 +57,6 @@ input {
   display: inline-block;
 }
 
-/* Karta z hasłem — wyróżniona */
 .card { 
   margin-top: 30px; 
   padding: 25px 30px; 
@@ -78,6 +73,21 @@ input {
 }
 
 .hidden { display: none; }
+
+/* Panel oskarżania */
+#accusePanel {
+  margin-top: 20px;
+  padding: 20px;
+  background: #1c1c1c;
+  border-radius: 15px;
+  display: inline-block;
+  text-align: center;
+}
+#accusePanel select, #accusePanel button {
+  font-size: 18px;
+  margin: 5px;
+  padding: 10px;
+}
 </style>
 </head>
 <body>
@@ -106,6 +116,14 @@ input {
 <div id="myName" class="hidden card"></div>
 <div id="result" class="hidden card"></div>
 
+<!-- Panel oskarżania -->
+<div id="accusePanel" class="hidden card">
+  <h3>OSKARŻ IMPOSTORA</h3>
+  <select id="accuseSelect"></select><br>
+  <button id="btnAccuse">Oskarż</button>
+  <button id="btnCancelAccuse">Anuluj</button>
+</div>
+
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -124,24 +142,14 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-const words = ["ASTRONAUTA","PARAPET","KANIBAL","BETONIARKA","KAPSEL","HIPOPOTAM","TEŚCIOWA",
-"ŻAGLÓWKA","ANTARKTYDA","MAGNEZ","WIEWIÓRKA","KARALUCH","PUDEŁKO","APOKALIPSA",
-"CHMURKA","KREDENS","WIRUS","LAWENDA","KSEROKOPIARKA","ŻYRANDOL","KASZANKA",
-"PARASOLKA","GILOTYNA","PANCERNIK","ŚRUBOKRĘT","SATELITA","KOCIOŁEK","DONICZKA",
-"PIEKARNIK","SZACHISTA","GRZYBNIA","ANANAS","TRĄBKA","SPAGHETTI","MARCHEWKA",
-"ŻÓŁW","ROLNIK","MIKROFON","BUMERANG","FOTOGRAF","ROBOT","TRAKTORZYSTA","BANAN",
-"LUNETA","DŻUNGLA","PIANINO","PŁYTA","KURCZAK","GWOŹDZIE","CZAJNIK","BAJGIEL",
-"TELESKOP","DRUKARKA","MRÓZ","SZYBA","KAMIEŃ","FORTEPIAN","LUSTERKO","SIEKIERA",
-"LATARKA","KOŃCÓWKA","MIŚ","CZARODZIEJ","KALENDARZ","SOFA","MUSZTARDA","TRZMIEL",
-"PĄCZEK","DINOZAUR","PLECAK","PERFUMY","KOSMITA","PIŻAMA","OGÓREK","ROWERZYSTA",
-"KSIĘŻYC","PIORUN","FRYTKI","TELEWIZOR","SAMOLOT","SŁUCHAWKI","PIANISTA","ŻETON",
-"CZEKOLADA","ŻOŁNIERZ","NURKOWANIE","MAGNES","KLEJ","PAJĄK","WAZON","TELEPORT",
-"GUMA","PLAKAT","TORNADO","TŁUMACZ","SANKI","LAMPA","BĄBELEK","MAKARON","RAKIETA","OKO","DARMOZJAD","TIKTOK","MEM","NETFLIX","KRAJOBRAZ","ROWER","TULEJA","CARPATH","AGRECOL","HITLER","REWOLWER","STARUCH","SIGMA","SNAP","DISCORD","MINISTERSTWO","TRAMWAJ","WAKACJE","PARK","KOT","PIES","IPHONE","KOMPUTER","FRYZURA","EMOJI","POLICJA","BAN","FLEX","KANAPKA","DŁUGOPIS","KAKTUS","DRIP","DOMÓWKA","HERBATA","MIŁOŚĆ","GRA","FILM","SPORT","PRALKA","SUSHI","TEAM","FACEBOOK","YOUTUBE","POCIĄG","DOM","BUDYNEK","BRAMKA"];
+const words = ["ASTRONAUTA","PARAPET","KANIBAL","BETONIARKA","KAPSEL","HIPOPOTAM","TEŚCIOWA","ŻAGLÓWKA","ANTARKTYDA","MAGNEZ","WIEWIÓRKA","KARALUCH","PUDEŁKO","APOKALIPSA","CHMURKA","KREDENS","WIRUS","LAWENDA","KSEROKOPIARKA","ŻYRANDOL","KASZANKA","PARASOLKA","GILOTYNA","PANCERNIK","ŚRUBOKRĘT","SATELITA","KOCIOŁEK","DONICZKA","PIEKARNIK","SZACHISTA","GRZYBNIA","ANANAS","TRĄBKA","SPAGHETTI","MARCHEWKA","ŻÓŁW","ROLNIK","MIKROFON","BUMERANG","FOTOGRAF","ROBOT","TRAKTORZYSTA","BANAN","LUNETA","DŻUNGLA","PIANINO","PŁYTA","KURCZAK","GWOŹDZIE","CZAJNIK","BAJGIEL","TELESKOP","DRUKARKA","MRÓZ","SZYBA","KAMIEŃ","FORTEPIAN","LUSTERKO","SIEKIERA","LATARKA","KOŃCÓWKA","MIŚ","CZARODZIEJ","KALENDARZ","SOFA","MUSZTARDA","TRZMIEL","PĄCZEK","DINOZAUR","PLECAK","PERFUMY","KOSMITA","PIŻAMA","OGÓREK","ROWERZYSTA","KSIĘŻYC","PIORUN","FRYTKI","TELEWIZOR","SAMOLOT","SŁUCHAWKI","PIANISTA","ŻETON","CZEKOLADA","ŻOŁNIERZ","NURKOWANIE","MAGNES","KLEJ","PAJĄK","WAZON","TELEPORT","GUMA","PLAKAT","TORNADO","TŁUMACZ","SANKI","LAMPA","BĄBELEK","MAKARON","RAKIETA","OKO","DARMOZJAD","TIKTOK","MEM","NETFLIX","KRAJOBRAZ","ROWER","TULEJA","CARPATH","AGRECOL","HITLER","REWOLWER","STARUCH","SIGMA","SNAP","DISCORD","MINISTERSTWO","TRAMWAJ","WAKACJE","PARK","KOT","PIES","IPHONE","KOMPUTER","FRYZURA","EMOJI","POLICJA","BAN","FLEX","KANAPKA","DŁUGOPIS","KAKTUS","DRIP","DOMÓWKA","HERBATA","MIŁOŚĆ","GRA","FILM","SPORT","PRALKA","SUSHI","TEAM","FACEBOOK","YOUTUBE","POCIĄG","DOM","BUDYNEK","BRAMKA"];
 
 let playerId = Math.random().toString(36).substring(2,9);
 let roomRef = null;
 let isHost = false;
 let playerName = "";
+let hasAccused = false;
+let votingData = null;
 
 function randomCode() { return Math.floor(1000 + Math.random() * 9000).toString(); }
 
@@ -154,11 +162,6 @@ function showMyName() {
 function showResult(text) {
   document.getElementById("result").innerText = text;
   document.getElementById("result").classList.remove("hidden");
-
-  const waitingDiv = document.getElementById("waiting");
-  if (!waitingDiv.classList.contains("hidden")) {
-    waitingDiv.querySelector("h2").innerText = "ZGADNIJ IMPOSTORA";
-  }
 }
 
 async function updatePlayerList() {
@@ -168,6 +171,18 @@ async function updatePlayerList() {
   document.getElementById("playerList").innerText = playersList.join(", ");
   const nonHostCount = playersList.filter(n => !n.includes("(HOST)")).length;
   document.getElementById("players").innerText = `Gracze: ${nonHostCount}/4`;
+
+  // Aktualizacja panelu oskarżania
+  const select = document.getElementById("accuseSelect");
+  select.innerHTML = "";
+  Object.entries(data.players || {}).forEach(([id, p]) => {
+    if(id !== playerId && !p.name.includes("(HOST)")) {
+      const opt = document.createElement("option");
+      opt.value = id;
+      opt.text = p.name;
+      select.add(opt);
+    }
+  });
 }
 
 // Tworzenie pokoju
@@ -247,6 +262,7 @@ window.startGame = async function() {
   await roomRef.update({ started: true, roles, word });
   document.getElementById("btnNextRound").classList.remove("hidden");
   showResult("Runda rozpoczęta!");
+  document.getElementById("accusePanel").classList.remove("hidden");
 }
 
 // Rozlosowanie kolejnej rundy (host)
@@ -263,119 +279,82 @@ window.nextRound = async function() {
 
   await roomRef.update({ started: true, roles, word });
   document.getElementById("result").classList.add("hidden");
+  document.getElementById("accusePanel").classList.remove("hidden");
+  hasAccused = false;
 }
+
+// --- OBSŁUGA OSKARŻANIA ---
+document.getElementById("btnAccuse").addEventListener("click", async () => {
+  if(hasAccused) return alert("Już oskarżyłeś w tej rundzie!");
+  const accusedId = document.getElementById("accuseSelect").value;
+  if(!accusedId) return alert("Wybierz gracza do oskarżenia!");
+
+  votingData = {
+    accused: accusedId,
+    votes: {},
+    completed: false
+  };
+
+  const snap = await roomRef.get();
+  const data = snap.val();
+  Object.keys(data.players).forEach(pid => {
+    if(pid === playerId || pid === accusedId) votingData.votes[pid] = true;
+    else votingData.votes[pid] = null;
+  });
+
+  await roomRef.child("voting").set(votingData);
+  hasAccused = true;
+  alert("🟢 TRWA GŁOSOWANIE");
+  await roomRef.child("players").child(accusedId).update({ alert: "ZOSTAŁEŚ OSKARŻONY" });
+});
+
+document.getElementById("btnCancelAccuse").addEventListener("click", () => {
+  document.getElementById("accuseSelect").selectedIndex = 0;
+});
+
+// Słuchanie zmian w głosowaniu
+function listenVoting() {
+  roomRef.child("voting").on("value", snapshot => {
+    const vote = snapshot.val();
+    if(!vote) return;
+    const myVote = vote.votes[playerId];
+    if(myVote === null) {
+      const agree = confirm(`Ktoś oskarżył gracza! Chcesz zagłosować ZA?`);
+      vote.votes[playerId] = agree;
+      roomRef.child("voting").set(vote);
+    }
+
+    const allVoted = Object.values(vote.votes).every(v => v !== null);
+    if(allVoted && !vote.completed) {
+      vote.completed = true;
+      roomRef.child("voting").set(vote);
+
+      const allYes = Object.values(vote.votes).every(v => v === true);
+      roomRef.child("roles").get().then(rSnap => {
+        const roles = rSnap.val();
+        const accusedName = Object.values(data.players || {}).find(p => p.id === vote.accused)?.name || "???";
+        if(allYes) {
+          const impostorName = Object.values(roles).find((v, k) => k === vote.accused) === "impostor";
+          if(roles[vote.accused] === "impostor") {
+            alert(`✅ Wszyscy zagłosowali ZA! Gracz ${Object.values(data.players).find(p => p.id===vote.accused)?.name} był impostorem.`);
+          } else {
+            alert(`✅ Wszyscy zagłosowali ZA! Niestety to nie był impostor`);
+          }
+        } else {
+          alert(`❌ Oskarżenie nie przeszło.`);
+        }
+      });
+    }
+  });
+}
+
+// --- WYWOŁANIE --- 
 document.getElementById("btnCreate").addEventListener("click", createRoom);
 document.getElementById("btnJoin").addEventListener("click", joinRoom);
 document.getElementById("btnStart").addEventListener("click", startGame);
 document.getElementById("btnNextRound").addEventListener("click", nextRound);
+
+listenVoting();
 </script>
 </body>
 </html>
-
-<!-- ... Twój obecny HTML do <body> ... -->
-
-<!-- Panel Oskarżania -->
-<div id="accusePanel" class="hidden card">
-  <h2>🕵️‍♂️ OSKARŻ IMPOSITORA</h2>
-  <select id="accuseSelect"></select>
-  <div style="margin-top:15px;">
-    <button id="btnAccuse">Zatwierdź</button>
-    <button id="btnCancelAccuse">Cofnij</button>
-  </div>
-</div>
-
-<script>
-let hasAccused = false;
-let currentAccusation = null;
-
-// Wyświetl panel oskarżania (po dołączeniu do pokoju)
-function showAccusePanel(players) {
-  if (hasAccused) return;
-  const panel = document.getElementById("accusePanel");
-  const select = document.getElementById("accuseSelect");
-  select.innerHTML = "";
-  players.forEach(p => {
-    if (p.id !== playerId && !p.name.includes("(HOST)")) {
-      const option = document.createElement("option");
-      option.value = p.id;
-      option.innerText = p.name;
-      select.appendChild(option);
-    }
-  });
-  panel.classList.remove("hidden");
-}
-
-// Funkcja wywoływana po kliknięciu Zatwierdź
-document.getElementById("btnAccuse").addEventListener("click", async () => {
-  if (hasAccused) return;
-  const accusedId = document.getElementById("accuseSelect").value;
-  if (!accusedId) return alert("Wybierz gracza!");
-  currentAccusation = accusedId;
-  hasAccused = true;
-  document.getElementById("accusePanel").classList.add("hidden");
-
-  // Dodaj oskarżenie w bazie
-  await roomRef.child("accusation").set({
-    accuser: playerId,
-    accused: accusedId,
-    votes: { [playerId]: true }
-  });
-
-  // Komunikat dla oskarżającego
-  alert("⏳ TRWA GŁOSOWANIE!");
-
-  // Komunikat dla oskarżonego
-  const accusedName = (await roomRef.child(`players/${accusedId}`).get()).val().name;
-  alert(`⚠️ ZOSTAŁEŚ OSKARŻONY: ${accusedName}`);
-
-  // Powiadomienie dla reszty graczy
-  roomRef.child("players").get().then(snapshot => {
-    const playersObj = snapshot.val();
-    Object.keys(playersObj).forEach(pid => {
-      if (pid !== playerId && pid !== accusedId && !playersObj[pid].name.includes("(HOST)")) {
-        alert(`🚨 HEJ, ON JEST IMPOSITOREM! ${accusedName}`);
-      }
-    });
-  });
-});
-
-// Cofnij
-document.getElementById("btnCancelAccuse").addEventListener("click", () => {
-  currentAccusation = null;
-  hasAccused = false;
-  document.getElementById("accusePanel").classList.add("hidden");
-});
-
-// Słuchanie głosów
-roomRef.child("accusation").on("value", async snapshot => {
-  const data = snapshot.val();
-  if (!data) return;
-
-  const playersSnap = await roomRef.child("players").get();
-  const playersObj = playersSnap.val();
-  const totalVotes = Object.keys(playersObj).filter(pid => pid !== data.accused && !playersObj[pid].name.includes("(HOST)")).length;
-  const votesCount = Object.keys(data.votes || {}).length;
-
-  if (votesCount === totalVotes + 1) { // +1 bo oskarżający głosuje automatycznie
-    // Wszyscy zagłosowali TAK
-    const accusedRoleSnap = await roomRef.child(`roles/${data.accused}`).get();
-    const accusedRole = accusedRoleSnap.val();
-    if (accusedRole === "impostor") {
-      alert(`✅ Wszyscy zagłosowali ZA! Gracz ${(await roomRef.child(`players/${data.accused}`).get()).val().name} był impostorem.`);
-    } else {
-      alert(`❌ Wszyscy zagłosowali ZA! Niestety to nie był impostor.`);
-    }
-
-    // Reset oskarżenia i zakończenie rundy
-    await roomRef.child("accusation").remove();
-    hasAccused = false;
-    currentAccusation = null;
-    document.getElementById("result").classList.add("hidden");
-    document.getElementById("accusePanel").classList.add("hidden");
-  }
-});
-</script>
-
-
-
-
